--- a/spring-boot/springboot-m3u8-web/src/index.html
+++ b/spring-boot/springboot-m3u8-web/src/index.html
@@ -11,8 +11,7 @@
     <script>
       const video = document.getElementById("video");
       const videoSrc =
-        "http://localhost:8080/video/m3u8?filepath=E:/Type Files/Videos/Captures/m3u8s&filename=视频.m3u8";
-
+        "http://localhost:8080/video/m3u8?filepath=X://Type Files/Videos/Captures/m3u8s&filename=2024-03-13 12-36-31.m3u8";
       if (video.canPlayType("application/vnd.apple.mpegurl")) {
         video.src = videoSrc;
       } else if (Hls.isSupported()) {
